--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title> Age Calculator</title>
+  <title>Age Calculator</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&amp;display=swap'><link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
+<div>
+  <nav>
+  
+  </nav>
+  <br>
+</div>
 
 <div class="container">
   <div class="input-wrapper">
+    <h1 class="title">How Old Are You?</h1>
     <input type="date" id="date-input" />
     <button id="calc-age-btn">Calculate</button>
   </div>
